compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__qualified_type_not_a_tuple.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "\nimport mod.{type Pair as Duo}\npub fn first(pair: Duo<a, b>) {\n  pair.0\n}\n"
---
----- SOURCE CODE
-- mod.rakun
pub record Pair<a, b> { Pair(a, b) }

-- main.rakun

import mod.{type Pair as Duo}
pub fn first(pair: Duo<a, b>) {
  pair.0
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:4:3
  │
4 │   pair.0
  │   ^^^^ This is not a tuple

To index into this value it needs to be a tuple, however it has this type:

    Duo(a, b)
